--- a/css/loginstyles.css
+++ b/css/loginstyles.css
@@ -4,30 +4,36 @@ body
 	text-align: center;
 	font-family: sans-serif;
 	font-size: 12pt;
-	margin : auto auto;
 }
 
 form
 {
 	text-align: left;
-	width: 30%;
+	width: 50%;
 	background-color: #EEE;
 	border: 1px solid gray;
-
 	padding: 12px;
+	margin: auto auto;
+	border-radius: 5px;
 }
 
 label
 {
-	float: left;
+	font-weight: bold;
+	font-size: 11pt;
 }
 
-#validation_errors
+input
 {
-	width: 30%;
+	display: block;
+}
+
+span.validation_error
+{
 	text-align: left;
-	background-color: #FBB;
-	padding : 12px;
-	border: 1px solid black;
+	background-color: #FAA;
+	font-size: 10pt;
+	padding-left: 0.2em;
+	padding-right: 0.2em;
 }
 
