--- a/css/loginstyles.css
+++ b/css/loginstyles.css
@@ -1,31 +1,33 @@
 body 
 {
-	background-color : #DDD;
+	background-color : #B4B4B4;
 	text-align: center;
 	font-family: sans-serif;
 	font-size: 12pt;
+	margin: 0;
 }
 
 form
 {
 	text-align: left;
-	width: 50%;
-	background-color: #EEE;
-	border: 1px solid gray;
+	background-color: #f4f4fa;
 	padding: 12px;
 	margin: auto auto;
-	border-radius: 5px;
+	border-radius: 5px 0px 0px 5px;
+	margin-left : 20%;
+	margin-top : 2%;
 }
 
 label
 {
-	font-weight: bold;
+	font-weight: normal;
 	font-size: 11pt;
+	display : block;
 }
 
 input
 {
-	display: block;
+
 }
 
 span.validation_error
@@ -35,5 +37,22 @@ span.validation_error
 	font-size: 10pt;
 	padding-left: 0.2em;
 	padding-right: 0.2em;
+	border-radius: 3px;
 }
 
+#reglink
+{
+	text-align: right;
+	background-color: #f4f4fa;
+	margin : auto auto;
+	margin-right: 30%;
+	margin-top: 2%;
+	padding: 12px;
+	font-size: 11pt;
+	border-radius: 0px 5px 5px 0px;
+}
+
+#reglink p
+{
+	margin : 0;
+}
