--- a/css/loginstyles.css
+++ b/css/loginstyles.css
@@ -7,7 +7,18 @@ body
 	margin: 0;
 }
 
-form
+#pageheader
+{
+	background-color: white;
+}
+
+#pageheader p
+{
+	font-size: 18pt;
+	font-weight: bold;
+}
+
+#loginform , #registerform
 {
 	text-align: left;
 	background-color: #f4f4fa;
