--- a/css/loginstyles.css
+++ b/css/loginstyles.css
@@ -1,6 +1,6 @@
 body
 {
-	background-color : #B4B4B4;
+	background-color : #555;
 	text-align: center;
 	font-family: sans-serif;
 	font-size: 12pt;
@@ -39,7 +39,7 @@ body
 	display: inline-block;
 	margin : auto auto;
 	border-radius: 0 0 6px 6px;
-	color: #555;
+	color: #333;
 }
 
 #pageheader p
