--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -1,6 +1,6 @@
 body
 {
-	background-color : #B4B4B4;
+	background-color : #555;
 	text-align: center;
 	font-family: sans-serif;
 	font-size: 12pt;
