--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -120,3 +120,23 @@ body
 	font-weight: bold;
 	color : #9999DD;
 }
+
+#change_password_form
+{
+	text-align: left;
+}
+
+label
+{
+	display: block;
+}
+
+span.validation_error
+{
+	text-align: left;
+	background-color: #FAA;
+	font-size: 10pt;
+	padding-left: 0.2em;
+	padding-right: 0.2em;
+	border-radius: 3px;
+}
